# AIBalancer

./: .gitignore  README.md
AIBalancer/: components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
AIBalancer/src/: App.vue  main.ts  styles.css  vite-env.d.ts
AIBalancer/src-tauri/: Cargo.toml  aibalancer.db  tauri.conf.json
AIBalancer/src-tauri/logs/config/: config.yaml
AIBalancer/src-tauri/src/: lib.rs  main.rs
AIBalancer/src-tauri/src/api_client/: commands.rs  mod.rs  providers.rs
AIBalancer/src-tauri/src/crypto/: commands.rs  encryption.rs  mod.rs
AIBalancer/src-tauri/src/database/: commands.rs  connection.rs  migrations.rs  mod.rs  models.rs
AIBalancer/src-tauri/src/logging/: commands.rs  config.rs  error_report.rs  filter.rs  manager.rs  mod.rs
AIBalancer/src-tauri/src/proxy/: commands.rs  mod.rs
AIBalancer/src-tauri/src/quota/: commands.rs  deduction.rs  mod.rs  models.rs  scheduler.rs
AIBalancer/src/components/: index.ts
AIBalancer/src/components/charts/: ChartView.vue  index.ts
AIBalancer/src/components/common/: ErrorBoundary.vue  GlassButton.vue  GlassCard.vue  GlassSelect.vue  GlowingInput.vue  index.ts
AIBalancer/src/components/dashboard/: UsageTable.vue  index.ts
AIBalancer/src/core/: index.ts
AIBalancer/src/core/errors/: ErrorHandler.ts  GlobalErrorHandler.ts  index.ts
AIBalancer/src/core/storage/: DatabaseStorage.ts  LocalStorage.ts  StorageAdapter.ts  index.ts
AIBalancer/src/core/tauri/: TauriBridge.ts  index.ts
AIBalancer/src/models/entities/: Account.ts  AlertRule.ts  AppSettings.ts  Balance.ts  DeductionTransaction.ts  LogConfig.ts  LogEntry.ts  PlatformType.ts  QuotaDimension.ts  QuotaStrategyGroup.ts  UsageRecord.ts  index.ts
AIBalancer/src/models/repositories/: AccountRepository.ts  BalanceRepository.ts  BaseRepository.ts  LogRepository.ts  SettingsRepository.ts  UsageRepository.ts  index.ts
AIBalancer/src/models/services/: AccountService.ts  AlertService.ts  BalanceService.ts  EncryptedStorageService.ts  LogService.ts  MockDataService.ts  MonitoringService.ts  ProxyConfigService.ts  QuotaService.ts  UpdateService.ts  index.ts
AIBalancer/src/models/stores/: appStore.ts  balanceStore.ts  index.ts  logStore.ts  quotaStore.ts  settingsStore.ts  themeStore.ts  uiStore.ts
AIBalancer/src/styles/: animations.css  component-styles.ts  design-system.css  glass-fallback.css  glass-mixins.css  interactions.css  micro-interactions.css  naive-ui-glass.css  performance.css  responsive-mixins.css  responsive.ts
AIBalancer/src/viewmodels/: BaseViewModel.ts  index.ts
AIBalancer/src/viewmodels/accounts/: useAccountDetailViewModel.ts  useAccountFormViewModel.ts  useAccountListViewModel.ts  useAccountManagementViewModel.ts
AIBalancer/src/viewmodels/dashboard/: useDashboardViewModel.ts
AIBalancer/src/viewmodels/settings/: useSettingsViewModel.ts
AIBalancer/src/viewmodels/shared/: useNotificationViewModel.ts  useUpdateViewModel.ts
AIBalancer/src/views/accounts/: AccountManagement.vue  AccountStatistics.vue
AIBalancer/src/views/accounts/components/: AccountCardItem.vue  AccountDetailDrawer.vue  AccountFormModal.vue  AccountGrid.vue  AccountStatsBar.vue  AccountTable.vue  ApiKeyManager.vue
AIBalancer/src/views/dashboard/: Dashboard.vue
AIBalancer/src/views/layout/: AppLayout.vue  Header.vue  MainLayout.vue  Sidebar.vue
AIBalancer/src/views/quota/: QuotaOverview.vue
AIBalancer/src/views/quota/components/: DimensionCard.vue  DimensionTree.vue
AIBalancer/src/views/settings/: Settings.vue
CPP/: CMakeLists.txt  README.md  cpp20_features_example.cpp  main.cpp  架构设计-MVVM优化版.md
CPP/.claude/: settings.local.json
CPP/docs/: AI余额管家设计文档.md
CPP/qml/: main.qml
CPP/qml/components/: AccountListItem.qml  AccountListView.qml  AccountOverviewCard.qml  AlertRuleItem.qml  BalanceCard.qml
CPP/qml/dialogs/: AddAccountDialog.qml  AddAlertDialog.qml  EditAccountDialog.qml
CPP/qml/pages/: Dashboard.qml  Settings.qml
CPP/qml/views/: AboutView.qml  AccountManagementView.qml  AlertSettingsView.qml  DashboardView.qml
CPP/resources/: qml.qrc
CPP/src/: main.cpp
CPP/src/core/: AccountManager.cpp  AccountManager.h  AlertEngine.cpp  AlertEngine.h  BalanceFetcher.cpp  BalanceFetcher.h  DeepSeekApiClient.cpp  DeepSeekApiClient.h  Logging.cpp  Logging.h
CPP/src/core/di/: ServiceLocator.h
CPP/src/database/: DataStorage.cpp  DataStorage.h
CPP/src/models/: Account.h  AlertRule.h  BalanceInfo.h
CPP/src/repositories/impl/: DatabaseAccountRepository.cpp  DatabaseAccountRepository.h  DatabaseAlertRepository.cpp  DatabaseAlertRepository.h  DatabaseBalanceRepository.cpp  DatabaseBalanceRepository.h  DatabaseRepository.cpp  DatabaseRepository.h  NetworkBalanceRepository.cpp  NetworkBalanceRepository.h
CPP/src/repositories/interfaces/: IAccountRepository.h  IAlertRepository.h  IBalanceRepository.h
CPP/src/viewmodels/: AccountListViewModel.cpp  AccountListViewModel.h  AccountViewModel.cpp  AccountViewModel.h  AlertViewModel.cpp  AlertViewModel.h  BalanceViewModel.cpp  BalanceViewModel.h  DashboardViewModel.cpp  DashboardViewModel.h
CPP/tests/: CMakeLists.txt
CPP/tests/mocks/: MockBalanceRepository.cpp  MockBalanceRepository.h
CPP/tests/unit/: BalanceViewModelTest.cpp
docs/: APP整体设计方案.md  UI设计方案.md  多维度综合计费监控系统设计方案.md  整体设计方案.md  日志系统设计方案.md  账户管理设计方案.md
