[package]
name = "aibalancer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aibalancer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde", "json"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["local-offset", "formatting", "parsing"] }
flate2 = "1.0"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
num_cpus = "1.16"
regex = "1.10"
serde_yaml = "0.9"
sysinfo = "0.33"

# 加密相关
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
keyring = "3"

# HTTP 客户端（用于 API 调用）
reqwest = { version = "0.12", features = ["json"] }

